@@ -15,6 +15,10 @@ The ``crash`` binary supports several command line arguments.
 +---------------------------------------+--------------------------------------------------+
 | ``-U``, ``--username``                | The username to authenticate in the database     |
 +---------------------------------------+--------------------------------------------------+
+| ``-W``, ``--password``                | Force prompt for password. Otherwise it prompts  |
+|                                       | for password automatically in case the server    |
+|                                       | requires user authorization.                     |
++---------------------------------------+--------------------------------------------------+
 | ``-c COMMAND``, ``--command COMMAND`` | Execute the SQL statement and exit.              |
 +---------------------------------------+--------------------------------------------------+
 | ``--hosts HOSTS``                     | The CrateDB hosts to connect to.                 |
@@ -75,9 +79,30 @@ Example Usage with SSL
     $ crash --hosts st1.crate.io:4200 st2.crate.io st3.crate.io \
             --format json \
             --verify-ssl true --cert-file /home/.certs/crateClient.crt --key-file /home/.certs/crateClient.key \
-            --ca-cert-file /home/.certs/rootCA.crt -U sslUser
+            --ca-cert-file /home/.certs/rootCA.crt -U sslUser \
             -c 'select * from sys.nodes' > output.json
 
+
+=====================
+Environment Variables
+=====================
+
+Crash takes the following environment variables into account to select default
+connection parameters. These can be helpful to avoid user-input prompts or any
+other hard-coded cli parameter.
+
+:CRATEPW: Password to be used if CrateDB demands password authentication.
+          Keep in mind that for security reasons the usage of this variable is
+          not safe.
+
+
+For example::
+
+    $ export CRASHPW=dustins-password
+    $ crash --hosts localhost:4200 \
+            --username dustin \
+            --format json \
+            -c 'select * from sys.nodes' > output.json
 
 .. _commands:
 
