@@ -13,7 +13,7 @@ chardet = 3.0.4
 codecov = 2.0.9
 collective.recipe.omelette = 0.16
 coverage = 4.4.1
-crate = 0.20.1
+crate = 0.21.0
 crate-docs-theme = 0.5.41
 docutils = 0.13.1
 gp.recipe.tox = 0.4
